--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "dev:port": "next dev -p 3000",
-    "build": "npm run generate-manifest && next build",
+    "build": "pnpm run generate-optimized-manifest && next build",
     "start": "next start",
     "lint": "next lint",
     "generate-manifest": "node src/lib/hooks/generateImageManifest.ts",
