--- a/src/lib/assets-manifest.json
+++ b/src/lib/assets-manifest.json
@@ -1,90 +1,142 @@
 {
   "brands": [
     {
-      "id": "cc311ab5-5daa-44c2-a588-78397bb0f600",
+      "id": "b3b95487-127e-44e4-a97d-1996fe3c1cdd",
       "src": "/assets/optimized-images/brands/ACUMEN_logo.webp",
       "alt": "ACUMEN_logo"
     },
     {
-      "id": "2a69de63-3c31-4546-ad18-7d2634ae1058",
+      "id": "18a69297-0e51-432b-8759-9e56197b96b9",
       "src": "/assets/optimized-images/brands/ACVIAN_logo.webp",
       "alt": "ACVIAN_logo"
     },
     {
-      "id": "d8d3de8c-8ecd-4df6-8fff-fc0a95a12c64",
+      "id": "50066576-f151-4844-aebc-a2022d2b25ed",
       "src": "/assets/optimized-images/brands/ADS_logo.webp",
       "alt": "ADS_logo"
     }
   ],
   "countries": [
     {
-      "id": "f5234565-bbb6-4bfd-89cb-1ced422edd96",
+      "id": "eb2863f0-98cd-4939-9723-c2ff40adc122",
       "src": "/assets/optimized-images/countries/albania.webp",
       "alt": "albania"
     },
     {
-      "id": "ea764657-9816-4e89-9629-6a44cb698443",
+      "id": "5d6e4a27-9387-4cc6-aecc-32b50bea11aa",
       "src": "/assets/optimized-images/countries/algeria.webp",
       "alt": "algeria"
     },
     {
-      "id": "9514f2ae-37b7-4112-93a8-66723008ef4c",
+      "id": "2b4c44fa-282b-4188-a232-e78d7be9e57d",
       "src": "/assets/optimized-images/countries/armenia.webp",
       "alt": "armenia"
     },
     {
-      "id": "f7871d57-85c6-4f4d-8772-7295a0ea5987",
+      "id": "ac6d5c06-1bf3-414b-85e8-fb08bd1d0288",
       "src": "/assets/optimized-images/countries/georgia.webp",
       "alt": "georgia"
     },
     {
-      "id": "4193aaf2-fc30-4601-a4ce-975ecc540d14",
+      "id": "f0adb414-4b37-447c-ab09-655006767ab6",
       "src": "/assets/optimized-images/countries/kosovo.webp",
       "alt": "kosovo"
     },
     {
-      "id": "c7158f32-2316-4534-a2d2-cf6cc58f6a92",
+      "id": "0d59d8d6-440c-4cd2-b0b6-b174cc3da73d",
       "src": "/assets/optimized-images/countries/moldova.webp",
       "alt": "moldova"
     },
     {
-      "id": "ea1bc17e-e7fb-4299-a827-ca0064de81a8",
+      "id": "a0c2b755-9abf-4655-96f8-b27ce7943755",
       "src": "/assets/optimized-images/countries/morocco.webp",
       "alt": "morocco"
     },
     {
-      "id": "b8ec7511-65e0-48e7-ab74-5af91b1ddc52",
+      "id": "19c88f9f-7d91-432e-a158-d84a56db88ba",
       "src": "/assets/optimized-images/countries/north-macedonia.webp",
       "alt": "north-macedonia"
     },
     {
-      "id": "073b9ca0-d5c3-4f96-b898-de6f96bb5e15",
+      "id": "0cf40818-a2b8-4ef7-8a2b-35bc25bc152b",
       "src": "/assets/optimized-images/countries/romania.webp",
       "alt": "romania"
     },
     {
-      "id": "b504e81f-c3c7-496d-9197-d57ecf7bfa47",
+      "id": "c298b960-6fc4-41a0-a3ab-87168dbf052a",
       "src": "/assets/optimized-images/countries/tunisia.webp",
       "alt": "tunisia"
     }
   ],
   "hero": [
     {
-      "id": "e7e1c113-0dd9-4c7c-a037-3dd097830b6a",
+      "id": "f659a44d-da50-4cd2-a2c1-7014c09c6a2f",
+      "src": "/assets/optimized-images/hero/bpo-banner.webp",
+      "alt": "bpo-banner"
+    },
+    {
+      "id": "1afac5fe-580f-414e-af7b-2edd15acc22c",
       "src": "/assets/optimized-images/hero/countries-banner.webp",
       "alt": "countries-banner"
     },
     {
-      "id": "904868f9-b8a1-48e3-8c25-de0ae3170e9b",
+      "id": "43b7e115-68b1-4c70-b69e-1ffdef11f752",
+      "src": "/assets/optimized-images/hero/employer-of-record-banner.webp",
+      "alt": "employer-of-record-banner"
+    },
+    {
+      "id": "58d874d0-884d-4c4e-bc45-3c5fbfdfcc5c",
+      "src": "/assets/optimized-images/hero/global-payroll-banner.webp",
+      "alt": "global-payroll-banner"
+    },
+    {
+      "id": "749254e0-6cba-4371-a335-7bdf4b3e841d",
       "src": "/assets/optimized-images/hero/global-recruiting-banner.webp",
       "alt": "global-recruiting-banner"
+    },
+    {
+      "id": "bebfcd74-4b00-4e8e-8300-33a939147604",
+      "src": "/assets/optimized-images/hero/homepage-banner.webp",
+      "alt": "homepage-banner"
+    },
+    {
+      "id": "ac7d52bf-871c-4654-95a6-d51c3d5316fe",
+      "src": "/assets/optimized-images/hero/visas-and-work-permits-banner.webp",
+      "alt": "visas-and-work-permits-banner"
     }
   ],
   "home": [
     {
-      "id": "8374f218-ecab-47db-8240-ffbec71f879f",
+      "id": "f9ca9206-b62d-476e-9e65-aaa151c16af7",
       "src": "/assets/optimized-images/home/banner.webp",
       "alt": "banner"
+    }
+  ],
+  "keyFeatures": [
+    {
+      "id": "7a0d8d8d-be3b-43e1-9fcb-f59cea043862",
+      "src": "/assets/optimized-images/keyFeatures/bpo-features.webp",
+      "alt": "bpo-features"
+    },
+    {
+      "id": "8af0d570-6ca9-4e3a-8888-694ba9a6497b",
+      "src": "/assets/optimized-images/keyFeatures/employer-of-record-features.webp",
+      "alt": "employer-of-record-features"
+    },
+    {
+      "id": "3d602cf5-66ed-4e88-b165-4cfe8a937b64",
+      "src": "/assets/optimized-images/keyFeatures/global-payroll-features.webp",
+      "alt": "global-payroll-features"
+    },
+    {
+      "id": "3cb41824-54a1-4d3c-b145-91bb2b1bf92e",
+      "src": "/assets/optimized-images/keyFeatures/global-recruiting-features.webp",
+      "alt": "global-recruiting-features"
+    },
+    {
+      "id": "38c66f95-4e19-4e5f-a577-1f2f16215434",
+      "src": "/assets/optimized-images/keyFeatures/visas-and-work-permits-features.webp",
+      "alt": "visas-and-work-permits-features"
     }
   ]
 }
